--- a/ssm/pom.xml
+++ b/ssm/pom.xml
@@ -86,6 +86,11 @@
             <artifactId>httpcore</artifactId>
             <version>4.4.16</version>
         </dependency>
+        <dependency>
+            <groupId>commons-httpclient</groupId>
+            <artifactId>commons-httpclient</artifactId>
+            <version>2.0.2</version>
+        </dependency>
     </dependencies>
 
     <build>
