--- a/ssm/pom.xml
+++ b/ssm/pom.xml
@@ -15,19 +15,22 @@
     <description>ssm</description>
     <properties>
         <java.version>17</java.version>
-        <spring-boot.version>3.0.0</spring-boot.version>
         <mysql.version>8.0.26</mysql.version>
-        <mybatis.version>3.5.7</mybatis.version>
         <fastjson2.version>2.0.33</fastjson2.version>
         <druid.version>1.2.6</druid.version>
+        <mybatis-version>3.0.2</mybatis-version>
         <jwt.version>3.11.0</jwt.version>
         <support.version>5.3.13</support.version>
-        <devtools.version>2.5.1</devtools.version>
+        <devtools.version>3.0.7</devtools.version>
         <mysql-connector-java.version>8.0.26</mysql-connector-java.version>
         <lombok.version>1.18.22</lombok.version>
         <httpclient.version>4.4.16</httpclient.version>
     </properties>
     <dependencies>
+        <dependency>
+            <groupId>org.thymeleaf</groupId>
+            <artifactId>thymeleaf</artifactId>
+        </dependency>
         <dependency>
             <groupId>org.springframework.boot</groupId>
             <artifactId>spring-boot-starter-amqp</artifactId>
@@ -43,7 +46,7 @@
         <dependency>
             <groupId>org.mybatis.spring.boot</groupId>
             <artifactId>mybatis-spring-boot-starter</artifactId>
-            <version>${spring-boot.version}</version>
+            <version>${mybatis-version}</version>
         </dependency>
 <!--        <dependency>-->
 <!--            <groupId>com.baomidou</groupId>-->
@@ -70,8 +73,7 @@
         <dependency>
             <groupId>org.springframework.boot</groupId>
             <artifactId>spring-boot-devtools</artifactId>
-            <scope>runtime</scope>
-            <optional>true</optional>
+            <version>${devtools.version}</version>
         </dependency>
         <dependency>
             <groupId>mysql</groupId>
