--- a/ssm/src/main/resources/application-dev.yml
+++ b/ssm/src/main/resources/application-dev.yml
@@ -15,10 +15,19 @@ spring:
     timeBetweenEvictionRunsMillis: 60000
     # 配置一个连接在池中最小生存的时间，单位是毫秒
     minEvictableIdleTimeMillis: 300000
-
+  data:
+    redis:
+      host: 127.0.0.1
+      port: 6379
+      password:
 mybatis:
   # 配置XML映射文件中指定的实体类别名路径
   type-aliases-package: com.huzhirong.top.ssm.modules.*.pojo
   # 配置MyBatis的xml配置文件路径
-  mapper-locations: classpath:mappers/*.xml
+  mapper-locations: classpath:mappers/*/*.xml
+  configuration:
+    # 配置驼峰命名规则
+    map-underscore-to-camel-case: true
+    # 配置打印sql语句
+    log-impl: org.apache.ibatis.logging.stdout.StdOutImpl
 
