--- a/ssm/pom.xml
+++ b/ssm/pom.xml
@@ -25,6 +25,7 @@
         <mysql-connector-java.version>8.0.26</mysql-connector-java.version>
         <lombok.version>1.18.22</lombok.version>
         <httpclient.version>4.4.16</httpclient.version>
+        <security.version>3.1.0</security.version>
     </properties>
     <dependencies>
         <dependency>
@@ -48,7 +49,14 @@
             <artifactId>mybatis-spring-boot-starter</artifactId>
             <version>${mybatis-version}</version>
         </dependency>
-<!--        <dependency>-->
+        <!-- https://mvnrepository.com/artifact/org.springframework.boot/spring-boot-starter-security -->
+        <dependency>
+            <groupId>org.springframework.boot</groupId>
+            <artifactId>spring-boot-starter-security</artifactId>
+            <version>${security.version}</version>
+        </dependency>
+
+        <!--        <dependency>-->
 <!--            <groupId>com.baomidou</groupId>-->
 <!--            <artifactId>mybatisplus-spring-boot-starter</artifactId>-->
 <!--            <version>1.0.5</version>-->
